增加了针对.net后台的调试支持. 界面依然是丑爆了哈哈

--- a/demowebserivices/src/main/res/layout/customprogressdialog.xml
+++ b/demowebserivices/src/main/res/layout/customprogressdialog.xml
@@ -9,7 +9,7 @@
         android:id="@+id/loadingImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@anim/progress_round" />
+        android:background="@drawable/progress_round" />
 
     <TextView
         android:id="@+id/id_tv_loadingmsg"
